# codingyahac-ml-2021

./: .gitignore  README.md  pyproject.toml
appendix/: NA.py
boston/: boston.py
iris/: iris_hidden.py
lemonade/: lemonade.py
pandas/: pandas_example.py
tensorflow_101/: README.md
tensorflow_101/appendix/: batch_normalization.py  data_types.py
tensorflow_101/boston/: boston_hidden.py
tensorflow_101/iris/: iris.py
tensorflow_101/lemonade/: lemonade.py
tensorflow_101/pandas/: pandas_example.py
tensorflow_102/: README.md
tensorflow_102/Lenet/: Lenet_cifar10.py  Lenet_mnist.py
tensorflow_102/conv2d/: conv2d.py
tensorflow_102/flatten/: flatten.py  reshape.py
tensorflow_102/maxpool2d/: maxpoll2d.py
tensorflow_102/notMNIST/: notMNIST.py
tensorflow_102/sample_image_set/: sample_image_set.py
