[tool.poetry]
name = "codingyahac-ml-2021"
version = "0.1.0"
description = ""
authors = ["SungminSo <soos196@hanyang.ac.kr>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.2.0"

[tool.poetry.dev-dependencies]
tensorflow = "^2.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
